
	finally figured out there was a bug in exp-mod, which caused
	is_probably_prime to fail from time to time ... was not doing
	an initial modulus on the base

	* src/ehbigint.c: fix bug with exp-mod, clarify, #define magic nums
	* src/ehbigint-log.c: improve debug, add "0b00101011" format to output
	* tests/test-comp-exp-mod-with-gmp.c: make non-trival, expose bug
	* tests/test-from-binstr-to-binstr-round-trip.c: ignore zero byte pad
	* tests/test-mul.c: add a longer number
	* tests/test-shift-right.c: more tests
	* Makefile.am: use local ./libtool


2017-04-23  Eric Herman <eric@freesa.org>

	move stack-alloc defines to ehbigint-priv.h

	 * src/ehbigint.c: move stack-alloc defines to ehbigint-priv.h
	 * src/ehbigint-priv.h: moved stack-alloc defines from ehbigint.c
	 * misc/pre-tidy.patch: respin


2017-04-23  Eric Herman <eric@freesa.org>

	remove un-needed calls to strlen
	import new src/eba.h

	* src/ehbigint-str.c: remove un-needed calls to strlen
	* src/eba.h: pulled from upstream
	* misc/pre-tidy.patch: pulled from upstream


2017-04-08  Eric Herman <eric@freesa.org>

	Add ehbi_exp(result, base, exponent)
	Add ehbi_set_binary_string, ehbi_to_binary_string functions
	Copy in sources from libehstr git@github.com:ericherman/libehstr.git
	replace hex_raw and decimal_raw with origin functions in ehstr


	* src/ehbigint.h: add set_binary_str, to_binary_str, exp()
	* src/ehbigint-str.c: add set_binary, to_binary; exp,
				replace raw with ehstr
	* src/ehstr.c: copy from libehstr/src
	* src/ehstr.h: copy from libehstr/src
	* src/ehbigint.c: code tidy
	* tests/test-exp.c: new test
	* tests/test-from-binstr-to-binstr-round-trip.c: new test
	* misc/pre-tidy.patch: respin
	* Makefile.am: use the new sources
	* .gitignore: test-from-binstr-to-binstr-round-trip, test-exp


2017-04-02  Eric Herman <eric@freesa.org>

	Add a ehbi_init for struct initialization
	Add ehbi_is_odd function
	Add a test-shift-right and fix bug in shifting
	Use the ehbi_init in tests