@@ -66,8 +66,11 @@ static const char *PRIMES[] = {
 	"2", "3", "5", "7", "11", "13", "17",
 	"853", "857", "859", "863", "877", "881", "883", "887", "907", "911",
 	"919", "929", "937", "941", "947", "953", "967", "971", "977",
-	"983", "991", "997", "7901", "7907", "7919", "982451579",
-	"982451581", "982451609", "982451629", "982451653",
+	"983", "991", "997", "7901", "7907", "7919", "765409", "7654319",
+	"982451579", "982451581", "982451609", "982451629", "982451653",
+	"9999999769", "9999999781", "9999999787", "9999999817", "9999999833",
+	"9999999851", "9999999881", "9999999929", "9999999943", "9999999967",
+	"49999999957", "49999999961", "49999999967",
 	NULL
 };
 
@@ -77,7 +80,8 @@ static const char *COMPOSITES[] = {
 	"917", "927", "931", "943", "949", "951", "957", "973", "979", "981",
 	"987", "993", "7900", "7902", "7903", "7904", "7905", "7906", "7908",
 	"982451577", "982451583", "982451607", "982451611", "982451627",
-	"982451631", "982451651",
+	"982451631", "982451651", "9999999771", "9999999783", "9999999789",
+	"9999999961", "49999999959", "49999999963", "49999999969",
 	NULL
 };
 
